# LoganTerminal

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
openspec/changes/bootstrap-project-infra/: design.md  proposal.md  tasks.md
openspec/specs/project-infrastructure/: spec.md
src/: App.tsx  index.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  clipboard.rs  fs.rs  git.rs  lib.rs  main.rs  pty.rs  screenshots.rs
src/components/AgentDashboard/: AgentDashboard.tsx
src/components/AssetPanel/: AssetPanel.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/DiffPanel/: DiffPanel.tsx
src/components/DropOverlay/: DropOverlay.tsx
src/components/FileTree/: FileTree.tsx
src/components/PaneTree/: PaneTree.tsx
src/components/ReviewPanel/: ReviewPanel.tsx
src/components/RightPanel/: RightPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/TabBar/: TabBar.tsx
src/components/Terminal/: Terminal.tsx
src/lib/: dashboard.test.ts  dashboard.ts  duration.test.ts  duration.ts  fuzzy.test.ts  fuzzy.ts  git.test.ts  git.ts  keys.test.ts  keys.ts  notify.ts  openLink.ts  paths.test.ts  paths.ts  recency.test.ts  recency.ts  reviewAttachments.ts  shellEscape.test.ts  shellEscape.ts  termBus.test.ts  termBus.ts  worktree.test.ts  worktree.ts
src/stores/: clipboardStore.ts  promptStore.test.ts  promptStore.ts  ptyStore.test.ts  ptyStore.ts  reviewStore.ts  screenshotStore.ts  settingsStore.ts  uiStore.ts
(+3 files in other folders)
