[package]
name = "loganterminal"
version = "0.1.0"
description = "LoganTerminal — a cross-platform terminal built for AI coding agents"
authors = ["Logan Shi"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loganterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
parking_lot = "0.12"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
shell-escape = "0.1"
arboard = { version = "3", features = ["image-data"] }
notify = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Workaround: cookie 0.18.1 (transitive dep via tauri/wry) breaks with time 0.3.52+.
# Pin to a compatible version until cookie is updated upstream.
time = "=0.3.51"

